--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="magenta_80">#980053</color>
+    <color name="magenta_60">#D1006F</color>
+    <color name="magenta_40">#F23DA0</color>
+    <color name="magenta_20">#FF66B2</color>
+    <color name="borderPink">#FCD7EB</color>
+    <color name="onboardingPink">#F7EFFF</color>
+    <color name="orange">#FF5C00</color>
+    <color name="blue">#6AB3D8</color>
+    <color name="black">#1D1E1C</color>
+    <color name="white">#FAFFF5</color>
+    <color name="gray_80">#000000</color>
+    <color name="gray_60">#8E8E8E</color>
+    <color name="gray_40">#727272</color>
+    <color name="gray_20">#F7F7F7</color>
 </resources>
