--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,66 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
+    android:viewportWidth="56"
+    android:viewportHeight="95">
+  <group android:scaleX="0.24757895"
+      android:scaleY="0.42"
+      android:translateX="21.06779"
+      android:translateY="27.55">
+    <group>
+      <clip-path
+          android:pathData="M0,0h56v95h-56z"/>
+      <path
+          android:pathData="M31.35,17.766C36.194,17.766 40.122,13.789 40.122,8.883C40.122,3.977 36.194,0 31.35,0C26.505,0 22.577,3.977 22.577,8.883C22.577,13.789 26.505,17.766 31.35,17.766Z">
         <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
+          <gradient 
+              android:startX="35.736"
+              android:startY="1.19"
+              android:endX="26.797"
+              android:endY="16.479"
+              android:type="linear">
+            <item android:offset="0" android:color="#FFBA1E61"/>
+            <item android:offset="0.11" android:color="#FFAC1D5D"/>
+            <item android:offset="0.27" android:color="#FFA01D59"/>
+            <item android:offset="0.48" android:color="#FF991C57"/>
+            <item android:offset="1" android:color="#FF971C56"/>
+          </gradient>
         </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+      </path>
+      <path
+          android:pathData="M53.138,18.169C54.466,16.681 54.35,14.385 52.881,13.042C51.411,11.698 49.144,11.814 47.817,13.302L41.991,19.833C40.664,21.321 40.779,23.617 42.249,24.961C43.718,26.305 45.985,26.188 47.313,24.7L53.138,18.169Z">
+        <aapt:attr name="android:fillColor">
+          <gradient 
+              android:startX="51.484"
+              android:startY="12.117"
+              android:endX="43.503"
+              android:endY="25.77"
+              android:type="linear">
+            <item android:offset="0" android:color="#FFBA1E61"/>
+            <item android:offset="0.11" android:color="#FFAC1D5D"/>
+            <item android:offset="0.27" android:color="#FFA01D59"/>
+            <item android:offset="0.48" android:color="#FF991C57"/>
+            <item android:offset="1" android:color="#FF971C56"/>
+          </gradient>
+        </aapt:attr>
+      </path>
+      <path
+          android:pathData="M53.524,69.458C52.517,68.973 51.37,68.873 50.296,69.175C49.221,69.478 48.29,70.163 47.675,71.105C46.9,74.093 45.451,76.858 43.442,79.183C41.433,81.508 38.919,83.328 36.097,84.502C33.275,85.676 30.223,86.171 27.18,85.948C24.137,85.724 21.187,84.789 18.562,83.215C15.937,81.641 13.708,79.472 12.051,76.878C10.394,74.284 9.354,71.337 9.013,68.267C8.673,65.197 9.04,62.089 10.086,59.187C11.133,56.285 12.83,53.669 15.045,51.544C16.475,50.232 18.06,49.105 19.764,48.189C21.303,47.287 22.953,46.595 24.671,46.131C25.614,45.879 26.575,45.697 27.545,45.588C27.829,47.235 29.85,58.349 38.236,62.053C39.504,62.609 42.232,63.77 45.362,62.934C49.093,61.93 52.223,58.406 52.744,55.006C53.776,48.28 44.992,40.315 35.805,37.668V27.608C35.823,27.007 35.721,26.408 35.506,25.847C35.292,25.286 34.968,24.774 34.554,24.342C34.14,23.91 33.645,23.567 33.097,23.332C32.55,23.098 31.962,22.977 31.368,22.977C30.774,22.977 30.185,23.098 29.638,23.332C29.091,23.567 28.596,23.91 28.182,24.342C27.768,24.774 27.444,25.286 27.229,25.847C27.014,26.408 26.913,27.007 26.931,27.608V36.841C23.173,37.227 19.513,38.292 16.126,39.986C13.52,41.357 11.097,43.058 8.915,45.049C5.741,48.094 3.3,51.835 1.778,55.986C0.257,60.136 -0.305,64.584 0.137,68.988C0.579,73.392 2.013,77.635 4.327,81.391C6.642,85.146 9.777,88.314 13.49,90.651C17.203,92.987 21.396,94.43 25.746,94.869C30.097,95.308 34.488,94.731 38.584,93.182C42.679,91.633 46.369,89.153 49.37,85.934C52.371,82.715 54.603,78.841 55.894,74.612C56.115,73.609 56.002,72.56 55.573,71.628C55.145,70.696 54.425,69.933 53.524,69.458ZM46.008,53.458C46.044,53.87 45.928,54.281 45.683,54.611C45.146,55.22 44.089,55.056 43.695,54.994C41.935,54.73 40.492,53.397 39.402,52.075C37.582,49.803 36.327,47.12 35.744,44.254C37.142,45.234 45.906,51.388 45.988,53.458H46.008Z">
+        <aapt:attr name="android:fillColor">
+          <gradient 
+              android:startX="47.931"
+              android:startY="32.115"
+              android:endX="13.648"
+              android:endY="90.755"
+              android:type="linear">
+            <item android:offset="0" android:color="#FFBA1E61"/>
+            <item android:offset="0.11" android:color="#FFAC1D5D"/>
+            <item android:offset="0.27" android:color="#FFA01D59"/>
+            <item android:offset="0.48" android:color="#FF991C57"/>
+            <item android:offset="1" android:color="#FF971C56"/>
+          </gradient>
+        </aapt:attr>
+      </path>
+    </group>
+  </group>
 </vector>
