--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
+    <color name="green">#4CAF50</color>
     <color name="magenta_80">#980053</color>
     <color name="magenta_60">#D1006F</color>
     <color name="magenta_40">#F23DA0</color>
