feat: fix time format

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,5 @@
     <color name="gray_80">#000000</color>
     <color name="gray_60">#8E8E8E</color>
     <color name="gray_40">#727272</color>
-    <color name="gray_20">#F7F7F7</color>
+    <color name="gray_20">#EBEBEB</color>
 </resources>
